--- a/hospital-front/src/styles/_custom.scss
+++ b/hospital-front/src/styles/_custom.scss
@@ -15,6 +15,12 @@ $bs-btn-color: #ffffff;
   font-family: "S-CoreDream-3Light";
 }
 
+.container {
+  background-color: #F1F2F7;
+}
+
+
+
 .fullWidth {
   width: 100%;
 }
