--- a/hospital-front/src/styles/patientListPage.scss
+++ b/hospital-front/src/styles/patientListPage.scss
@@ -1,4 +1,5 @@
 $navy: #05438a;
+
 .c-navy {
   color: $navy;
 }
@@ -8,20 +9,51 @@ $navy: #05438a;
   box-shadow: 0px 0px 5px 2px rgba($color: #000000, $alpha: 0.1);
   border: none;
 }
+
 #search-box,
 #user-box {
   background-color: white;
   box-shadow: 0px 0px 5px 2px rgba($color: #000000, $alpha: 0.1);
   padding: 13px;
   border-radius: 0.375rem;
-  //   width: 800px;/
+}
+
+#search-box {
+  flex-grow: 8;
+  margin: 0;
+}
+
+#user-box {
+  // flex-grow: 1;
+  flex-basis: 250px;
+}
+
+#search-input-box {
+  align-items: stretch;
 }
 
 .search-title {
   justify-content: space-between;
   align-items: center;
+
   button {
     color: white;
     font-size: 14px;
   }
+}
+
+.form-control {
+  flex-grow: 1;
+  // min-width: 110px;
+}
+
+
+select {
+  max-width: 220px;
+}
+
+#user-box .btn-logout:hover,
+#user-box .btn-logout:focus {
+  color: white;
+  /* 원하는 글자색으로 변경합니다. */
 }
