--- a/hospital-front/src/styles/patientPage.scss
+++ b/hospital-front/src/styles/patientPage.scss
@@ -13,7 +13,19 @@ $grey: #f1f2f7;
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 700px) {
+  .patient-table {
+    font-size: 14px;
+
+    th {
+      font-size: 12px;
+      line-height: 20px;
+    }
+  }
+
+}
+
+@media (max-width: 580px) {
   .patient-table {
     th {
       display: none;
@@ -22,56 +34,38 @@ $grey: #f1f2f7;
 }
 
 .table-container {
-  height: 800px; /* Set the desired height for the container */
-  overflow-y: auto; /* Enable vertical scrolling */
+  height: 800px;
+  overflow-y: auto;
+
 }
+
+// .table thead th {
+//   position: sticky;
+//   top: 0;
+//   background-color: #f8f9fa;
+// }
+
 .sticky-thead {
   position: sticky;
   top: 0;
   background-color: #f1f2f7;
-  z-index: 1;
+  // z-index: 1;
+
 }
 
 #order-list-table {
   text-align: center;
   width: 1200px;
 
+
   thead tr th {
     background-color: $grey;
+
+
+
   }
 }
 
-.sidebar-wrapper {
-  display: flex;
-  flex-direction: column;
-}
-
-.sidebar {
-  background-color: #f7f7f7;
-  padding-top: 1rem;
-}
-
-.main-content {
-  padding-left: 1rem;
-}
-
-@media (min-width: 768px) {
-  .sidebar-wrapper {
-    flex-direction: row;
-  }
-
-  .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 200px; /* 원하는 사이드바 너비로 설정 */
-  }
-
-  .main-content {
-    margin-left: 200px; /* 사이드바 너비만큼 컨텐츠를 우측으로 밀어줍니다. */
-  }
-}
 
 .menu-title {
   font-weight: 600;
