--- a/hospital-front/src/styles/patientPage.scss
+++ b/hospital-front/src/styles/patientPage.scss
@@ -43,7 +43,7 @@ $grey: #f1f2f7;
 //   position: sticky;
 //   top: 0;
 //   background-color: #f8f9fa;
-// }
+// }.
 
 .sticky-thead {
   position: sticky;
@@ -57,13 +57,10 @@ $grey: #f1f2f7;
   text-align: center;
   width: 1200px;
 
-
   thead tr th {
     background-color: $grey;
-
-
-
   }
+
 }
 
 
