--- a/hospital-front/src/styles/sidebarMenu.scss
+++ b/hospital-front/src/styles/sidebarMenu.scss
@@ -1,6 +1,6 @@
-.App {
-  margin-top: 30px;
-}
+// .App {
+//   margin-top: 30px;
+// }
 
 /* 네비게이션 사이드바 스타일 */
 .nav {
@@ -8,6 +8,7 @@
   padding: 10px;
   border-radius: 5px;
 }
+
 .side-menu {
   font-size: 16px;
   width: 200px;
