검색시 자동완성 등

--- a/hospital-front/src/styles/_custom.scss
+++ b/hospital-front/src/styles/_custom.scss
@@ -41,5 +41,14 @@ $container-max-widths: (
 );
 
 
+.list-group-item {
+  padding: 5px !important;
+}
+
+.hr-style {
+  margin: 10px 0;
+
+}
+
 // Bootstrap 임포트
 @import "~bootstrap/scss/bootstrap";
