--- a/hospital-front/src/styles/patientListPage.scss
+++ b/hospital-front/src/styles/patientListPage.scss
@@ -100,3 +100,11 @@ select {
     padding: 10px !important;
   }
 }
+
+#user-box .btn-logout:hover {
+  color: white;
+}
+
+#user-box .btn-logout:focus {
+  color: #20bccc;
+}
