--- a/hospital-front/src/styles/patientListPage.scss
+++ b/hospital-front/src/styles/patientListPage.scss
@@ -60,11 +60,10 @@ select {
   max-width: 220px;
 }
 
-#user-box .btn-logout:hover,
-#user-box .btn-logout:focus {
-  color: white;
-  /* 원하는 글자색으로 변경합니다. */
-}
+// #user-box .btn-logout:hover,
+// #user-box .btn-logout:focus {
+//   color: white;
+// }
 
 .card {
   border: none !important;
